Fix Tittle Overlap Issue

--- a/client/src/pages/home/banner/styles.scss
+++ b/client/src/pages/home/banner/styles.scss
@@ -31,7 +31,7 @@
         display: flex;
         flex-direction: column;
         position: relative;
-        z-index: 3;
+        z-index: 1;
         width: 80vw;
         height: 150px;
         font-size: 18px;
